--- a/frontend/src/app/pages/contacts/contact.component.html
+++ b/frontend/src/app/pages/contacts/contact.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <ng2-smart-table [settings]="settings" [source]="source" 
-    (createConfirm)="createConfirmCall($event)"></ng2-smart-table>
+    (createConfirm)="createConfirmCall($event)" (editConfirm)="editConfirmCall($event)" (deleteConfirm)="deleteConfirmCall($event)"></ng2-smart-table>
     <!-- (editConfirm)=editConfirmCall($event)	(deleteConfirm)=deleteConfirmCall($event) -->
   </div> 
 
